--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Test User Table", "Index", "TestUser")</li>
                     <li>@Html.ActionLink("Location", "Location", "Home")</li>
+                    <li>@Html.ActionLink("Rate Search", "Index", "RateSearch")</li>
                 </ul>
                 @{Html.RenderAction("_LoginPartial", "Home"); }
             </div>
